// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Button Link All Variants 1`] = `
<div
  className="css-6s6wkd"
>
  <div
    className="css-1o3vjwm-AllVariants"
  >
    <a
      className="css-8obxqn"
      href="https://www.uswitch.com"
      target="_blank"
    >
      primary link button
    </a>
    <div
      className="css-1dy3vsl-Spacer"
    />
    <a
      className="css-2j1mil"
      href="https://www.uswitch.com"
      target="_blank"
    >
      secondary link button
    </a>
    <div
      className="css-1dy3vsl-Spacer"
    />
  </div>
</div>
`;

exports[`Storyshots Elements|Button Link Primary Variant 1`] = `
<div
  className="css-6s6wkd"
>
  <a
    className="css-8obxqn"
  >
    Primary link button
  </a>
</div>
`;

exports[`Storyshots Elements|Button Link Secondary Variant 1`] = `
<div
  className="css-6s6wkd"
>
  <a
    className="css-2j1mil"
  >
    Primary link button
  </a>
</div>
`;
